[package]
name = "mproxy"
version = "0.1.0"
authors = ["Matt Woodyard <matt@mattwoodyard.com>"]
edition = "2018"

[dependencies]
#actix = "0.5"
#actix = { path = "actix" }
#actix-web = "0.6.10"
#actix-web = { path = "actix-web" } 
bincode = "*"
bytes="*"
env_logger = "*"
futures = "0.1"
http ="*"
httparse = "*"
hyper ="*"
native-tls = "*"
net2 = "*"
openssl = "0.10"
pretty_env_logger = "*"
rmp = "*"
rmp-serde ="*"
serde = "*"
serde_derive = "*"
serde_json = "*"
slab = "*"
rkv = "*"
tempdir = "*"
tokio = "*"
tokio-core = "*"
tokio-io="0.1"
tokio-openssl = "0.2"
tokio-tcp = "*"
tokio-tls = "*"
uri = "*"
url ="*"
uuid = { version = "0.7", features = ["serde", "v4"] }
