[package]
name = "mproxy"
version = "0.1.0"
authors = ["Matt Woodyard <matt@mattwoodyard.com>"]
edition = "2018"

[dependencies]
bincode = "*"
bytes="*"
clap = "*"
env_logger = "*"
futures = "0.1"
http ="*"
httparse = "*"
hyper ="*"
net2 = "*"
openssl = "0.10"
pretty_env_logger = "*"
rkv = "*"
rmp = "*"
rmp-serde ="*"
serde = "*"
serde_derive = "*"
serde_json = "*"
lexpr = "*"
slab = "*"
tempdir = "*"
tokio = "*"
tokio-core = "*"
tokio-io="0.1"
tokio-openssl = "0.2"
tokio-tcp = "*"
tokio-tls = "*"
uri = "*"
url ="*"
uuid = { version = "0.7", features = ["serde", "v4"] }
warp = "*"
